runnable without mm

--- a/motpred_interface/config/method_specs/HumanMac.yaml
+++ b/motpred_interface/config/method_specs/HumanMac.yaml
@@ -1,15 +1,16 @@
-dataset: 'h36m'
+hip_mode: vanilla
+method_name: HumanMacbaseline
+ckpt_path: 'checkpoints/h36m_ckpt.pt'
+dataset: ${dataset.dataset_name}
 seed: 0
-t_his: 25
-t_pred: 100
-batch_size: 64
+method_batch_size: ${batch_size}
+t_his: ${obs_length}
+t_pred: ${pred_length}
+model_mode: ${dataset_split}
 num_epoch: 1001
 num_data_sample: 50000
 num_val_data_sample: 5000
 lr: 3.e-4
-n_pre: 20
-multimodal_path: ./data/data_multi_modal/t_his25_1_thre0.500_t_pred100_thre0.100_filtered_dlow.npz
-data_candi_path: ./data/data_multi_modal/data_candi_t_his25_t_pred100_skiprate20.npz
 padding: 'LastFrame'
 Complete: True
 noise_steps: 1000
@@ -31,5 +32,4 @@ ema: True
 vis_switch_num: 10
 vis_col: 5
 vis_row: 3
-cfg: h36m
-mode: eval
+n_pre: 20
