--- a/motpred_interface/config/dataset/h36m.yaml
+++ b/motpred_interface/config/dataset/h36m.yaml
@@ -5,6 +5,7 @@ dataset_name: "h36m"
 precomputed_folder: "motpred_eval/datasets/auxiliar/Human36M/${task.task_name}/"
 annotations_folder: "motpred_eval/datasets/annotations/Human36M"
 dtype: float32
+multimodal_threshold: 0.5
 
 data_loader_train:
     augmentation: 0
@@ -30,3 +31,4 @@ data_loader_test:
     subjects: ["S9", "S11"]
     actions: "all"
     drop_last: False
+    if_load_mmgt:  ${eval:'True if "probabilistic in str(${stats_mode})" else False'}
