--- a/motpred_interface/config/method_specs/HumanMac.yaml
+++ b/motpred_interface/config/method_specs/HumanMac.yaml
@@ -1,4 +1,4 @@
-hip_mode: vanilla
+skeleton_type: "SkeletonCenterPoseAlignSeqStart" # 
 method_name: HumanMac
 ckpt_path: 'checkpoints'
 dataset: ${dataset.dataset_name}
