--- a/motpred_interface/config/dataset/h36m.yaml
+++ b/motpred_interface/config/dataset/h36m.yaml
@@ -8,12 +8,13 @@ dtype: float32
 multimodal_threshold: 0.5
 
 data_loader_train:
-    augmentation: 0
+    stride: 10
+    augmentation: 5
     shuffle: True
     subjects: ["S1", "S5", "S6", "S7", "S8"]
     segments_path: "motpred_eval/datasets/annotations/Human36M/${task.task_name}/segments_${task.history_sec}s-${task.prediction_horizon_sec}s_train.csv"
     actions: "all"
-    drop_last: True
+    drop_last: False
 
 data_loader_valid:
     augmentation: 0
