--- a/motpred_interface/config/dataset/freeman.yaml
+++ b/motpred_interface/config/dataset/freeman.yaml
@@ -31,3 +31,4 @@ data_loader_test:
     # split: "test"
     actions: "all"
     drop_last: False
+    if_load_mmgt:  ${eval:'True if "probabilistic in str(${stats_mode})" else False'}
