--- a/motpred_interface/config/config.yaml
+++ b/motpred_interface/config/config.yaml
@@ -22,7 +22,6 @@ batch_size: 512
 multimodal_threshold: 0.5
 metrics_at_cpu: False
 n_gpu: 1
-num_samples: 50
 seed: 0
 dataset_split: test
 # pred_length: None # in the future we may want to change this
@@ -30,6 +29,11 @@ silent: False
 
 obs_length: ${eval:'int(${task.history_sec} * ${dataset.fps})'}
 pred_length:  ${eval:'int(${task.prediction_horizon_sec} * ${dataset.fps})'}
+
+# Options for evaluation with stats_mode:ll_robustness
+num_samples: ${eval:'500 if "stats_mode == str(ll_robustness)" else 50'}
+min_num_valid_samples: 50
+ll_thresholds: [0.5, 0.25, 01, 0.08, 0.06, 0.07, 0.05, 0.04, 0.03, 0.02, 0.01] # in m
 
 
 
