corrected config for APDllerr motpred

--- a/motpred_interface/config/config.yaml
+++ b/motpred_interface/config/config.yaml
@@ -31,9 +31,9 @@ obs_length: ${eval:'int(${task.history_sec} * ${dataset.fps})'}
 pred_length:  ${eval:'int(${task.prediction_horizon_sec} * ${dataset.fps})'}
 
 # Options for evaluation with stats_mode:ll_robustness
-num_samples: ${eval:'500 if "stats_mode == str(ll_robustness)" else 50'}
+num_samples: ${eval:'200 if "stats_mode == str(ll_robustness)" else 50'}
 min_num_valid_samples: 50
-ll_thresholds: [0.5, 0.25, 01, 0.08, 0.06, 0.07, 0.05, 0.04, 0.03, 0.02, 0.01] # in m
+ll_thresholds: [0.8, 0.7, 0.6, 0.5, 0.3, 0.25, 0.1, 0.08, 0.06, 0.07, 0.05, 0.04, 0.03, 0.02, 0.01, 0.005, 0.001] # in m
 
 
 
