--- a/motpred_interface/config/config_llrobustness.yaml
+++ b/motpred_interface/config/config_llrobustness.yaml
@@ -18,7 +18,7 @@ dtype: float32
 
 mode: stats # 'vis: visualize results\ngen: generate and store all visualizations for a single batch\nstats: launch numeric evaluation')
 stats_mode: ll_robustness
-batch_size: 128
+batch_size: 512
 multimodal_threshold: 0.5
 metrics_at_cpu: False
 n_gpu: 1
@@ -31,9 +31,9 @@ obs_length: ${eval:'int(${task.history_sec} * ${dataset.fps})'}
 pred_length:  ${eval:'int(${task.prediction_horizon_sec} * ${dataset.fps})'}
 
 # Options for evaluation with stats_mode:ll_robustness
-num_samples: 200
+num_samples: 50
 min_num_valid_samples: 50
-ll_thresholds: [0.8, 0.7, 0.6, 0.5, 0.3, 0.25, 0.1, 0.08, 0.06, 0.07, 0.05, 0.04, 0.03, 0.02, 0.01, 0.005, 0.001] # in m
+ll_thresholds: [1.0, 0.75, 0.5,  0.1, 0.08, 0.06, 0.07, 0.06, 0.05, 0.04, 0.035, 0.03, 0.025, 0.02, 0.01, 0.009, 0.008, 0.007, 0.006, 0.005, 0.004, 0.003, 0.002, 0.001] # in m
 
 
 
