--- a/motpred_interface/config/config.yaml
+++ b/motpred_interface/config/config.yaml
@@ -31,10 +31,11 @@ obs_length: ${eval:'int(${task.history_sec} * ${dataset.fps})'}
 pred_length:  ${eval:'int(${task.prediction_horizon_sec} * ${dataset.fps})'}
 
 # Options for evaluation with stats_mode:ll_robustness
-num_samples: 50
+num_samples: 10
 min_num_valid_samples: 50
 ll_thresholds: [0.8, 0.7, 0.6, 0.5, 0.3, 0.25, 0.1, 0.08, 0.06, 0.07, 0.05, 0.04, 0.03, 0.02, 0.01, 0.005, 0.001] # in m
 
-
+if_store_output: True
+store_output_path: final_output/${task.task_name}/${method_specs.method_name}/${dataset.dataset_name}/
 
 
